GithubUsers/app/src/main/java/com/example/githubusers/core/domain/errors/ClientError.kt
package com.example.githubusers.core.domain.errors

class ClientError : Error()
